--- a/settings/css/settings.scss
+++ b/settings/css/settings.scss
@@ -1169,7 +1169,7 @@ table.grid td.date {
 
 .icon-info {
 	padding: 11px 20px;
-	vertical-align: super;
+	vertical-align: text-bottom;
 	opacity: .5;
 }
 
